[UPDATE]: AI, SSE, Added new table
• Explain with AI feature is now available for alerts, using nemotron model of nvidia via API

• Some bugs are corrected, Ensuring SSE is wired up

• Added tool tips barely everywhere to explain metrics and infos

• Concurrency, multiple kafka partitions, parallelism

• Ensuring Performance is at its best level by ensuring Redis is primer source, then falling back to sql server

• Added kafka and dataprocessor performance metrics  ex time elapsed per model inference per event, so maintenance be easier

• Next planned tasks: enable forecasts, persona clustering, next state prediction (those are disabled because i was debugging a serious thread bug, but eventually fixed reducing inference from 100000ms to ~20ms)

• Next planned tasks: wiring the chatbot so interactive chat be available, add export as pdf of general infos diagnostics, cleaning up unuseful infos, and stale code. then moving to devops tasks

• all of your previous comments are been considered all along (i hope)